# cast-codes

./: .gitignore  AGENTS.md  CAST-AGENT.md  CASTCODES.md  CODY-BRIEF.md  Cargo.toml  DESIGN-CHANGES.md  FAQ.md  README.md
.agents/skills/castcodes-dev-loop/: SKILL.md
.agents/skills/castcodes-fork-local-boundary/: SKILL.md
.agents/skills/castcodes-plugin-host/: SKILL.md
.agents/skills/castcodes-rebrand-surface/: SKILL.md
.agents/skills/castcodes-ui-work/: SKILL.md
.github/: FUNDING.yml  STAKEHOLDERS  pull_request_template.md
.github/actions/prepare_environment/: action.yml
.github/copilot/: setup-steps.yml
.github/workflows/: README.md  check_approvals.yml  ci.yml  create_release.yml  cut_new_release_candidate.yml  cut_new_releases.yml
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  lib.rs  root_view.rs  tab.rs  warp_managed_paths_watcher.rs  wasm_nux_dialog.rs
app/src/ai/: agent_tips.rs  ai_document_view.rs  coven_brand.rs  harness_availability.rs  harness_display.rs  mod.rs
app/src/ai_assistant/: coven_stream_persist.rs  mod.rs  panel.rs  transcript.rs
app/src/auth/: auth_manager.rs  auth_override_warning_body.rs  auth_state.rs  auth_view_body.rs  auth_view_shared_helpers.rs  login_slide.rs  needs_sso_link_view.rs
app/src/autoupdate/: channel_versions.rs  linux.rs  mac.rs  mod.rs  windows.rs
app/src/billing/: shared_objects_creation_denied_body.rs
app/src/browser/: browser_model.rs  browser_view.rs  mod.rs  url_input.rs  webview_host.rs
app/src/code/: active_file.rs  footer.rs  view.rs
app/src/context_chips/: display_chip.rs
app/src/pane_group/: mod.rs  tree.rs  tree_tests.rs
app/src/quit_warning/: mod.rs
app/src/resource_center/: main_page.rs  sections.rs  utils.rs  view.rs
app/src/server/: server_api.rs
app/src/settings/: ai.rs  app_icon.rs  code.rs  initializer.rs  theme.rs
app/src/settings_view/: about_page.rs  ai_page.rs  appearance_page.rs  code_page.rs  environments_page.rs  execution_profile_view.rs  features_page.rs  import_theme_modal.rs  main_page.rs  mod.rs  (+10 more)
crates/ai/: Cargo.toml
crates/cast_agent/: Cargo.toml
crates/cast_agent/src/: agent.rs  gateway.rs  lib.rs  runtime.rs  session.rs  substrate.rs
crates/cast_agent/tests/: streaming.rs  substrate.rs
crates/lsp/: Cargo.toml
resources/: design-tokens.css
script/: Entitlements.plist  check_ai_attribution  check_macos_cli_wrapper  check_rebrand  create_release_tag_and_branch  install_cargo_bundle  update_plist
script/linux/: bundle  install_build_deps
script/macos/: bundle
script/wasm/: bundle
script/windows/: bundle.ps1
specs/CASTCODES-BROWSER-PANEL/: PLAN-01-ui-toggle-persistence.md  PRODUCT.md  TECH.md
(+133 files in other folders)
