[package]
name = "cast_agent"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
log.workspace = true
dirs.workspace = true
toml = "0.8"
